[UPDATE] fix ui home page coin98

--- a/src/components/MainLayOut/Footer/footerStyle.module.scss
+++ b/src/components/MainLayOut/Footer/footerStyle.module.scss
@@ -81,8 +81,8 @@
               }
               .social-icon {
                 align-content: center;
-                width: 28px;
-                height: 28px;
+                width: 2.8rem;
+                height: 2.8rem;
               }
             }
           }
