--- a/src/components/views/Home/InfoApp/CardAppInfo/style.scss
+++ b/src/components/views/Home/InfoApp/CardAppInfo/style.scss
@@ -39,8 +39,8 @@
     .info-img {
       position: relative;
       z-index: 1;
-      width: 558px;
-      height: 533px;
+      width: 56rem;
+      height: 53rem;
       margin-top: $space-6-5;
     }
   }
