--- a/src/components/views/Home/YourNeed/OnePlatform/style.scss
+++ b/src/components/views/Home/YourNeed/OnePlatform/style.scss
@@ -1,8 +1,8 @@
 @import '@/styles/main.scss';
 
 .one-platform-wr {
-  width: 432px;
-  height: 300px;
+  width: 43.2rem;
+  height: 30rem;
   text-align: left;
   background-color: $bg-color-dark;
   border-radius: $border-rad-2;
