--- a/src/components/views/Home/YourNeed/OneBrowser/style.scss
+++ b/src/components/views/Home/YourNeed/OneBrowser/style.scss
@@ -5,6 +5,9 @@
   overflow: hidden;
   box-sizing: content-box;
   width: 100%;
+  height: 80rem;
+  position: relative;
+
   .text-content {
     position: relative;
     z-index: 1;
@@ -26,9 +29,8 @@
     }
   }
   .one-browser-video {
-    position: relative;
     // z-index: -1;
-    width: 624px;
+    width: 62.4rem;
     min-height: 61rem;
 
     video {
@@ -46,7 +48,7 @@
       width: 65%;
       height: 65%;
       position: absolute;
-      bottom: -11rem;
+      bottom: -16rem;
       right: 5.5rem;
     }
   }
