--- a/src/components/views/Home/YourNeed/OneHome/style.scss
+++ b/src/components/views/Home/YourNeed/OneHome/style.scss
@@ -2,7 +2,7 @@
 
 .one-home-wr {
   width: 100%;
-  height: 800px;
+  height: 80rem;
   padding-top: $space-11;
   border-radius: $border-rad-2;
   background-color: $bg-color-yellow;
